# cim-infrastructure

./: .dockerignore  .gitignore  ARCHITECTURE.md  CIM_ALIGNMENT_PLAN.md  CIM_AXIOM_ASSESSMENT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  DOMAIN_ALIGNMENT_ANALYSIS.md  Dockerfile  IMPROVEMENT_ROADMAP.md  NETBOX_NATS_INTEGRATION.md  NETBOX_STATUS.md  NETWORK_MIGRATION.md  README.md  SPRINT_PLAN.md  SPRINT_PROGRESS.md  STATUS.md  STATUS_OLD.md  WORKSPACE_SETUP.md  flake.nix  progress.json
.github/workflows/: ci.yml  nats-integration.yml  release.yml
cim-domain-infrastructure/: Cargo.toml  EXTRACTION.md  README.md
cim-domain-infrastructure/examples/: network_provisioning_saga.rs  topology_visualization.rs
cim-domain-infrastructure/src/: aggregate.rs  cim_graph_integration.rs  commands.rs  events.rs  lib.rs  policy_integration.rs  value_objects.rs
cim-infrastructure-nats/: Cargo.toml  README.md
cim-infrastructure-nats/src/: event_store.rs  lib.rs  projections.rs  publisher.rs  subjects.rs  subscriber.rs
cim-infrastructure-nats/tests/: integration_test.rs
cim-infrastructure-neo4j/: Cargo.toml  README.md
cim-infrastructure-neo4j/examples/: diagnose_neo4j.rs  neo4j_projection_demo.rs  test_connection.rs
cim-infrastructure-neo4j/src/: config.rs  error.rs  graph_model.rs  lib.rs  projection.rs  queries.rs  subscriber.rs
cim-infrastructure-neo4j/tests/: neo4j_integration.rs
docs/: ARCHITECTURE.md  DEVICE_TAXONOMY_SUMMARY.md  DOMAIN_VALUE_OBJECTS.md  EVENT_SOURCING.md  FRP_GUIDE.md  INTEGRATION_TESTING.md  JETSTREAM_TESTING_SUMMARY.md  MIGRATION_GUIDE.md  NETBOX_DOMAIN_MAPPING.md  NETBOX_INTEGRATION.md  NETBOX_MAPPING_DIAGRAM.md  PURE_PROJECTIONS.md  RESOURCE_TYPE_TAXONOMY.md  STATE_MACHINE.md
examples/: frp_infrastructure.rs  netbox_device_types.rs  netbox_integration_test.rs  netbox_test.rs
retrospectives/: task_1_1_events.md  task_1_2_event_store.md  task_1_4_event_serialization.md  task_1_5_event_versioning.md
src/: errors.rs  jetstream.rs  lib.rs  nats.rs  projection.rs  subjects.rs
src/adapters/: mod.rs  neo4j.rs  netbox.rs
src/aggregate/: commands.rs  compute_resource.rs  handlers.rs  mod.rs
src/domain/: compute_resource.rs  hostname.rs  invariants.rs  mod.rs  network.rs  resource_type.rs
src/event_store/: mod.rs  nats.rs
src/events/: compute_resource.rs  infrastructure.rs  mod.rs  versioning.rs
src/frp/: behavior.rs  combinators.rs  event.rs  mod.rs  signal.rs
src/projection/: executor.rs  pure.rs
src/service/: compute_resource.rs  mod.rs
src/state_machine/: mod.rs  resource_lifecycle.rs
tests/: aggregate_tests.rs  domain_alignment_tests.rs  event_store_integration_test.rs  event_tests.rs  jetstream_comprehensive_test.rs  jetstream_org_projection.rs  nats_connectivity_test.rs  nats_tests.rs  property_tests.rs
tests/events/: event_serialization.rs  event_versioning.rs  mod.rs
tests/fixtures/: mod.rs
tests/infrastructure/: mod.rs  test_event_stream.rs  test_message_routing.rs  test_nats_connection.rs
tests/property/: event_application.rs  mod.rs
