[package]
name = "cim-infrastructure"
version = "0.1.0"
edition = "2021"
authors = ["Cowboy AI, LLC <dev@thecowboy.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/cim-infrastructure"
description = "Infrastructure components for the Composable Information Machine"
keywords = ["cim", "nats", "infrastructure", "messaging"]
categories = ["network-programming", "asynchronous"]

[features]
default = []
neo4j = ["dep:neo4rs"]
netbox = ["dep:reqwest", "dep:urlencoding"]

[dependencies]
# CIM Core Dependencies
cim-domain = { path = "../cim-domain" }
cim-domain-spaces = { path = "../cim-domain-spaces" }
cim-domain-organization = { path = "../cim-domain-organization" }
cim-domain-person = { path = "../cim-domain-person" }
cim-domain-location = { path = "../cim-domain-location" }
cim-domain-policy = { path = "../cim-domain-policy" }
cim-graph = { path = "../cim-graph" }
# Note: cim-domain-nix has circular dependency - reference via AggregateId

# Async runtime and messaging
async-nats = "0.33"
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v7", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional: Neo4j graph database
neo4rs = { version = "0.7", optional = true }

# Optional: NetBox DCIM integration
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
urlencoding = { version = "2.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
test-case = "3.3"
proptest = "1.4"

[[bin]]
name = "netbox-projector"
path = "src/bin/netbox-projector.rs"
required-features = ["netbox"]
