[package]
name = "cim-domain-infrastructure"
version = "0.1.0"
edition = "2021"
authors = ["Cowboy AI, LLC <dev@thecowboy.ai>"]
description = "Infrastructure Domain - Event-sourced infrastructure management for CIM"
documentation = "https://docs.rs/cim-domain-infrastructure"
homepage = "https://github.com/thecowboyai/cim-domain-infrastructure"
repository = "https://github.com/thecowboyai/cim-domain-infrastructure"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["infrastructure", "domain", "event-sourcing", "ddd", "cim"]
categories = ["development-tools", "data-structures"]
exclude = [
    ".github/",
    "tests/",
    "examples/",
    ".gitignore",
    ".git/",
    "*.log",
    "target/",
]

[dependencies]
# CIM core modules
cim-domain = { workspace = true }
cim-domain-policy = { workspace = true, optional = true }
cim-graph = { workspace = true }

# Core dependencies for domain model
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
test-case = "3.3"

[features]
default = []
policy = ["dep:cim-domain-policy"]

[lib]
name = "cim_domain_infrastructure"
path = "src/lib.rs"
