[package]
name = "cim-infrastructure-nats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# Domain dependencies
cim-domain-infrastructure = { path = "../cim-domain-infrastructure" }

# NATS dependencies
async-nats = "0.33"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1.5"

# Async support
async-trait = "0.1"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
tracing-subscriber = "0.3"
